# playia

./: .gitignore  CLAUDE.md  FIRST_PROMPT.md  FOURTH_PROMPT.md  README.md  RELEASE_PROMPT.md  SECOND_PROMPT.md  THIRD_PROMPT.md  package-lock.json  package.json  vite.config.ts
backend/: main.py  pyproject.toml
backend/capture/: base.py  dxcam_impl.py  factory.py  mss_impl.py
backend/executor/: base.py  directinput_impl.py  errors.py  factory.py  pyautogui_impl.py
backend/memory/: __init__.py  connection.py  models.py  paths.py
backend/memory/migrations/: 001_initial.sql  __init__.py
backend/memory/repos/: __init__.py  episodes_repo.py  games_repo.py  knowledge_repo.py  motor_models_repo.py  recording_frames_repo.py  recordings_repo.py  skills_repo.py
backend/memory/seeds/: __init__.py  games.py
backend/motor/: __init__.py  base.py  errors.py  factory.py  onnx_impl.py
backend/planner/: actions.py  base.py  errors.py  factory.py  vlm_planner.py
backend/recording/: __init__.py  base.py  errors.py  factory.py  pynput_impl.py
backend/session/: base.py  engine.py  games.py
backend/strategist/: __init__.py  base.py  engine.py  errors.py  vlm_strategist.py
backend/training/: __init__.py  action_encoding.py  base.py  dataset.py  errors.py  model.py  onnx_export.py  trainer.py
backend/vision/: base.py  errors.py  factory.py  ollama_impl.py
docs/: memory-model.md
scripts/: setup-ollama.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: http.ts
src/routes/: +layout.svelte  +page.svelte
(+6 files in other folders)
