[project]
name = "playia-backend"
version = "0.1.0"
description = "PlayIA Python sidecar (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28",
    "mss>=10.2.0",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
windows = ["dxcam>=0.0.5"]
